<resources>
    <string name="app_name">Czytnik RSS</string>
    <string name="tab_title_all">Wszystkie</string>
    <string name="tab_title_favourites">Ulubione</string>
    <string name="rss_entry_image_description">Zdjęcie dołączone do wpisu RSS</string>
    <string name="add_entry_to_favourites">Dodać wpis do ulubionych?</string>
    <string name="remove_entry_from_favourites">Usunąć wpis z ulubionych?</string>
    <string name="yes_label">Tak</string>
    <string name="no_label">Nie</string>
    <string name="entry_added_to_favourites">Wpis dodany do ulubionych.</string>
    <string name="entry_removed_from_favourites">Wpis usunięty z ulubionych.</string>
    <string name="undo_favouriting">Cofnij</string>
    <string name="establishing_user_location">Określanie lokalizacji…</string>
    <string name="no_access_to_location_data">Brak dostępu do lokalizacji</string>
    <string name="location_is_not_enabled">Lokalizacja nie jest włączona</string>
    <string name="location_could_not_be_established">Lokalizacja nie mogła być określona</string>
    <string name="from_poland_label">z Polski</string>
    <string name="international_label">międzynarodowych</string>
    <string name="no_location_data">Brak danych lokalizacji</string>
    <string name="loading_international_news_tail_label">%s, ładowanie wiadomości międzynarodowych…</string>
    <string name="loading_news_label">Ładowanie wiadomości %s…</string>
    <string name="refresh_rss_entries">Odśwież</string>
    <string name="logout">Wyloguj się</string>
    <string name="logout_message">Czy chcesz wylogować użytkownika\n%s?</string>
    <string name="loading_rss_data_error">Błąd podczas ładowania danych, sprawdź połączenie z internetem.</string>
    <string name="rss_entry_image">Zdjęcie powiązane z wpisem RSS.</string>

    <string name="title_activity_rss_entry_details">Szczegóły wydarzenia</string>
    <string name="share_rss_entry">Udostępnij wpis</string>
    <string name="favourite_entry_details">Ulubione</string>
    <string name="share_entry">Udostępnij</string>

    <string name="title_activity_login">Zaloguj się lub załóż konto</string>
    <string name="choose_login_method">Wybierz sposób logowania:</string>
    <string name="create_account_label">Nie masz jeszcze konta?</string>
    <string name="prompt_email">Adres email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in_via_email">Zaloguj się przez email</string>
    <string name="action_sign_up">Załóż konto</string>
    <string name="action_sign_up_google">Zaloguj się przez Google</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="resend_verification_email_button">Ponów email weryfikacyjny</string>
    <string name="reset_password_button">Resetuj hasło</string>
    <string name="info_loading_user_data">Przetwarzanie danych…</string>
    <string name="verify_email_popup">Zweryfikuj adres email poprzez link w odebranej wiadomości i zaloguj się.</string>
    <string name="password_reset_email_sent">Wysłano wiadomość email z linkiem do resetowania hasła.</string>

    <string name="google_login_failed">Błąd logowania przez Google, sprawdź połączenie z internetem.</string>
    <string name="invalid_email">Niepoprawny adres email</string>
    <string name="invalid_password">Podaj hasło</string>
    <string name="login_failed">Błąd logowania, zły adres email, hasło lub brak połączenia z internetem.</string>
    <string name="signup_failed">Błąd rejestracji, możliwe, że podany użytkownik już istnieje lub nie ma połączenia z internetem.</string>
    <string name="email_not_verified">Adres email nie został jeszcze zweryfikowany.</string>
    <string name="resend_verification_email_action">Wyślij ponownie</string>
    <string name="reset_password">Resetuj hasło</string>
    <string name="email_sending_error">"Błąd wysyłania wiadomości email, spróbuj ponownie później."</string>
    <string name="resent_password_reset_email_action">Powtórz</string>
    <string name="firestore_insert_error">Błąd przy dodawaniu wpisu do bazy danych!</string>
    <string name="repeat_operation">Ponów</string>
    <string name="firestore_remove_error">Błąd przy usuwaniu wpisu z bazy danych!</string>
    <string name="notification_channel_name">Nowe artykuły</string>
    <string name="notification_channel_description">Powiadomienia o nowych artykułach.</string>
</resources>