<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.FragmentLoginOrSignup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/choose_login_method"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/moveToLogin"
        app:layout_constraintStart_toStartOf="@+id/moveToLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/create_account_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/moveToSignup"
        app:layout_constraintStart_toStartOf="@+id/moveToSignup"
        app:layout_constraintTop_toBottomOf="@+id/loginGoogle" />

    <Button
        android:id="@+id/moveToLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_sign_in_via_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginGoogle"
        app:layout_constraintStart_toStartOf="@+id/loginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/moveToSignup"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_sign_up"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginGoogle"
        app:layout_constraintStart_toStartOf="@+id/loginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/loginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_sign_up_google"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moveToLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>